Fixed header arrow show and content spacing on to header

--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,120 +1,4 @@
 /** Plugin feature for header navigation */
-/*
-.site-header {
-    &__category-navigation {
-        background: #333;
-        height: 3rem;
-        overflow: hidden;
-        transition: height 0.5s ease;
-        .nav-tabs {
-            border-color: transparent;
-            justify-content: space-between;
-            padding: 0.4rem 0;
-            .nav-link {
-                margin: 0;
-                border: none;
-                border-radius: 0;
-                background: none;
-                font-family: $title-font;
-                text-align: center;
-                color: #939393;
-                padding: 0 1rem;
-                i {
-                    width: 7rem;
-                    height: 0;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    margin: 0 auto;
-                    visibility: hidden;
-                    svg {
-                        width: 100%;
-                        path {
-                            fill: #939393;
-                        }
-                        g {
-                            fill: #939393;
-                        }
-                    }
-                }
-                &.active,
-                &:hover {
-                    color: #fff;
-                    i {
-                        svg {
-                            path {
-                                fill: #fff;
-                            }
-                            g {
-                                fill: #fff;
-                            }
-                        }
-                    }
-                }
-                &:hover {
-                    color: #fff;
-                }
-            }
-        }
-        .category-item {
-            color: #fff;
-            padding: 1.5rem 0 2.4rem;
-            p {
-                width: 25rem;
-                padding-left: 4rem;
-                font-size: 1.4rem;
-                font-family: $title-font;
-            }
-            .sites {
-                .site {
-                    margin: 0 2rem;
-                    width: 15rem;
-                    h3 {
-                        font-size: 1.3rem;
-                        font-weight: 400;
-                        line-height: 1.8rem;
-                        font-family: $title-font;
-                    }
-                    a {
-                        color: #fff;
-                        background: url("#{$theme-imgpath}/network-outgoing-link.white.svg")
-                            no-repeat top 0.5rem left;
-                        background-size: 1.3rem 1.3rem;
-                        padding-left: 1.8rem;
-                    }
-                }
-            }
-        }
-        .close-category-item {
-            position: absolute;
-            top: 0.5rem;
-            right: 1rem;
-            visibility: hidden;
-            opacity: 0;
-        }
-        &.open {
-            height: 25.2rem;
-            overflow: visible;
-            .nav-tabs {
-                border-color: #aaa;
-                padding: 1.9rem 0;
-                .nav-link {
-                    i {
-                        height: 7rem;
-                        visibility: visible;
-                        margin: 0 auto 0.5rem;
-                    }
-                }
-            }
-            .close-category-item {
-                visibility: visible;
-                opacity: 1;
-            }
-        }
-    }
-}
-*/
-
 
 .site-navigation {
     position: fixed;
